--- a/index.html
+++ b/index.html
@@ -84,12 +84,30 @@
         scene.fog = new THREE.Fog(0x111111, 10, 50);
 
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(0, 15, 10);
-        camera.lookAt(0, 0, 0);
 
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
+
+        function updateCamera() {
+            const aspect = window.innerWidth / window.innerHeight;
+            camera.aspect = aspect;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+
+            // Adjust position based on aspect ratio to fit the board (size ~20)
+            if (aspect < 1) {
+                // Portrait (Phone): Move camera higher and slightly back
+                camera.position.set(0, 35, 5);
+            } else {
+                // Landscape (Desktop): Default view
+                camera.position.set(0, 15, 10);
+            }
+            camera.lookAt(0, 0, 0);
+        }
+
+        window.addEventListener('resize', updateCamera);
+        updateCamera(); // Initialize camera position
 
         // --- Lighting ---
         const ambientLight = new THREE.AmbientLight(0x404040, 2);
